# tomoxide

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  book.toml
crates/tomoxide/: Cargo.toml  build.rs
crates/tomoxide-cli/: Cargo.toml
crates/tomoxide-cli/src/: chunk_cache.rs  config.rs  main.rs
crates/tomoxide-core/: Cargo.toml
crates/tomoxide-core/src/: backend.rs  data.rs  error.rs  lib.rs  params.rs
crates/tomoxide-cpu/: Cargo.toml
crates/tomoxide-cpu/src/: lib.rs
crates/tomoxide-cuda/: Cargo.toml  build.rs
crates/tomoxide-cuda/cuda/: README.md  elementwise.cu  shim.cpp
crates/tomoxide-cuda/src/: ffi.rs  lib.rs
crates/tomoxide-gui/: Cargo.toml
crates/tomoxide-gui/src/: app.rs  main.rs  project.rs  worker.rs
crates/tomoxide-gui/src/live/: mod.rs  recon_loop.rs  ring.rs  source.rs
crates/tomoxide-gui/src/views/: center.rs  data.rs  lamino.rs  live.rs  mod.rs  output.rs  run.rs  tune.rs  xanes.rs
crates/tomoxide-io/: Cargo.toml
crates/tomoxide-io/src/: lib.rs
crates/tomoxide-io/tests/: dxchange_read.rs  h5_write.rs  tiff_write.rs
crates/tomoxide-io/tests/fixtures/: dxchange_data_f32.npy  dxchange_theta_rad.npy
crates/tomoxide-prep/: Cargo.toml
crates/tomoxide-prep/src/: alignment.rs  fft.rs  filters.rs  hardening.rs  lib.rs  morph.rs  normalize.rs  phase.rs  stripe.rs  stripe3d.rs
crates/tomoxide-recon/: Cargo.toml
crates/tomoxide-recon/src/: center.rs  fourierrec.rs  gridrec.rs  lamino.rs  lib.rs  lprec.rs  ring.rs  vector.rs
crates/tomoxide-recon/tests/fixtures/: ndimage_shift_outputs.npy  ndimage_shift_params.npy
crates/tomoxide-sim/: Cargo.toml
crates/tomoxide-sim/src/: lib.rs  noise.rs  phantom.rs
crates/tomoxide-sim/tests/: noise_stats.rs
crates/tomoxide-wgpu/: Cargo.toml
crates/tomoxide-wgpu/src/: compute.rs  kernels.rs  lib.rs
crates/tomoxide-wgpu/src/shaders/: backproject.wgsl  bluestein.wgsl  elementwise.wgsl  fbp_filter.wgsl  medfilt3d.wgsl  mod.rs  project.wgsl
crates/tomoxide/cuda/: cfunc_filter.cu  cfunc_filter.cuh  cfunc_fourierrec.cu  cfunc_fourierrec.cuh  cfunc_linerec.cu  cfunc_linerec.cuh  defs.cuh  elementwise.cu  fft.cu  forwardproj.cu  iterative.cu  kernels_fourierrec.cuh  kernels_linerec.cuh  lamusfft.cu  lprec.cu  shim.cpp  shim_fp16.cu  stripe.cu
crates/tomoxide/data/: setup.cfg
crates/tomoxide/examples/: bench_dtype.rs  bench_parallel.rs  bench_pipeline.rs  bench_stream_recon.rs  h5_corr.rs  lamino_iterative_demo.rs  make_synthetic_dxchange.rs  parity_raw.rs  parity_stripe.rs  prof_stripe.rs  ring_center_validate.rs
crates/tomoxide/src/: backend.rs  config.rs  data.rs  dtype.rs  engine.rs  error.rs  geometry.rs  lib.rs  params.rs  pipeline.rs
crates/tomoxide/src/cpu/: mod.rs
crates/tomoxide/src/cuda/: ffi.rs  mod.rs
crates/tomoxide/src/io/: mod.rs
crates/tomoxide/src/prep/: alignment.rs  fft.rs  filters.rs  hardening.rs  mod.rs  morph.rs  normalize.rs  phase.rs  stripe.rs  stripe3d.rs  wavelet.rs
crates/tomoxide/src/recon/: center.rs  fourierrec.rs  gridrec.rs  lamino.rs  lprec.rs  mod.rs  ring.rs  vector.rs
crates/tomoxide/src/sim/: mod.rs  noise.rs  phantom.rs
crates/tomoxide/src/wgpu/: compute.rs  kernels.rs  mod.rs  streaming.rs
crates/tomoxide/src/wgpu/shaders/: backproject.wgsl  bluestein.wgsl  elementwise.wgsl  fbp_filter.wgsl  fft.wgsl  fft_shared.wgsl  fft_transpose.wgsl  fourierrec.wgsl  lprec.wgsl  medfilt3d.wgsl  mod.rs  project.wgsl
crates/tomoxide/src/xanes/: filter.rs  fit.rs  magnification.rs  mod.rs  reader.rs  result.rs
crates/tomoxide/tests/: add_drift_parity.rs  adjust_range_parity.rs  analytic_amplitude.rs  analytic_gpu_parity.rs  beamhardening_parity.rs  blur_edges_parity.rs  cancel_token.rs  center_entropy_parity.rs  center_in_filter_parity.rs  center_parity.rs  center_pc_parity.rs  config.rs  cuda_center_probe.rs  cuda_cgls_parity.rs  cuda_cpu_convention_parity.rs  cuda_elementwise_parity.rs  cuda_f16_pipeline.rs  cuda_fbp_parity.rs  cuda_fft_compose.rs  cuda_forward_project.rs  cuda_fourierrec_streaming.rs  cuda_iterative_bench.rs  cuda_lamino_adjoint.rs  cuda_lamino_fourierrec.rs  cuda_lamino_iterative.rs  cuda_lamino_stream.rs  cuda_lamino_tilt_probe.rs  cuda_lamino_tilt_scan.rs  cuda_lamino_z_convention.rs  cuda_lprec_streaming.rs  cuda_single_slice_streaming.rs  dxchange_read.rs  farago_parity.rs  fbp_gpu_parity.rs  fbp_roundtrip.rs  fourierrec_parity.rs  gaussian_filter_parity.rs  gpaganin_parity.rs  gridrec_subpixel_center.rs  h5_write.rs  (+47 more)
crates/tomoxide/tests/fixtures/: add_drift_input.npy  add_drift_output.npy  add_drift_params.npy  adjust_range_dmax.npy  adjust_range_dmin.npy  adjust_range_input.npy  adjust_range_output.npy  angles.npy  bh_angular_angles.npy  bh_angular_corr.npy  bh_centerline_ext.npy  bh_centerline_path.npy  bh_data_in.npy  bh_data_out.npy  bh_flat.npy  bh_row_angles.npy  blur_edges_input.npy  blur_edges_output.npy  blur_edges_params.npy  center_fc_pad.npy  center_fc_true.npy  center_pc_centers.npy  center_pc_proj0.npy  center_pc_proj180.npy  center_pc_rotc_centers.npy  center_pc_rotc_guess.npy  center_pc_rotc_proj0.npy  center_pc_rotc_proj180.npy  dxchange_dark_f32.npy  dxchange_small.h5  dxchange_white_f32.npy  farago_input.npy  gaussian_filter_input.npy  gaussian_filter_output.npy  gaussian_filter_params.npy  inpainter_morph_input.npy  inpainter_morph_mask.npy  inpainter_morph_output.npy  inpainter_morph_params.npy  median_filter_input.npy  (+123 more)
docs/: .ALGORITHMS.md.swp  ALGORITHMS.md  ARCHITECTURE.md  BENCHMARKS.md  GUI.md  LAMINOGRAPHY_ALIGNMENT.md  NEXT_STEPS.md  PORTING.md  ROADMAP.md  SUMMARY.md  introduction.md
tools/: gen_beamhardening_golden.py  gen_dxchange_fixture.py  gen_dxchange_pipeline_fixture.py  gen_dxchange_streaming_fixture.py  gen_scipy_ndimage_shift_golden.py  gen_sift_center_golden.py  gen_tomocupy_farago_golden.py  gen_tomocupy_gpaganin_golden.py  gen_tomopy_add_drift_golden.py  gen_tomopy_adjust_range_golden.py  gen_tomopy_blur_edges_golden.py  gen_tomopy_center_entropy_golden.py  gen_tomopy_center_golden.py  (+34 more)
(+2 files in other folders)
