# tomoxide — a Rust tomographic reconstruction toolkit.
#
# Combines the algorithmic breadth of tomopy (CPU `libtomo`) with the
# GPU-accelerated streaming reconstruction of tomocupy (CUDA), behind a
# single tri-backend abstraction: CPU / CUDA / wgpu(Metal).
#
# See docs/ARCHITECTURE.md for the backend model and docs/PORTING.md for the
# upstream -> tomoxide mapping that each module stub references.

[workspace]
resolver = "2"
members = [
    "crates/tomoxide",
    "crates/tomoxide-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "BSD-3-Clause"
repository = "https://github.com/physwkim/tomoxide"
authors = ["tomoxide contributors"]
description = "GPU/CPU tomographic reconstruction toolkit (tomopy + tomocupy, in Rust)"

[workspace.dependencies]
# --- the single library crate (used by the CLI binary) ---
tomoxide = { path = "crates/tomoxide", version = "0.1.0" }

# --- x-ray physics (beam hardening; optional, pulled only by the
# `beam-hardening` feature). Self-contained: vendors the xraylib C sources and
# data tables, so no system libxrl. Its build runs bindgen, which needs
# libclang at compile time (see crates/tomoxide-prep docs). ---
xraylib = { path = "../xraylib-rs/crates/xraylib", version = "0.1" }

# --- computer vision (SIFT center finding; optional, `sift-center` feature).
# Links a system/conda OpenCV (≥4.x); its build runs bindgen → needs clang. ---
opencv = { version = "0.98", default-features = false, features = ["features2d", "imgproc"] }

# --- numerics ---
ndarray = "0.16"
ndarray-npy = "0.9"
num-complex = "0.4"
num-traits = "0.2"
half = { version = "2", features = ["num-traits"] }
rayon = "1.10"
rustfft = "6"

# --- diagnostics / config ---
thiserror = "2"
log = "0.4"

# --- CLI ---
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# --- optional GPU backend (wgpu / Metal) ---
# Pulled only when a crate enables its `gpu-wgpu` feature; the default
# workspace build never compiles it.
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
