# tomoxide — a Rust tomographic reconstruction toolkit.
#
# Combines the algorithmic breadth of tomopy (CPU `libtomo`) with the
# GPU-accelerated streaming reconstruction of tomocupy (CUDA), behind a
# single tri-backend abstraction: CPU / CUDA / wgpu(Metal).
#
# See docs/ARCHITECTURE.md for the backend model and docs/PORTING.md for the
# upstream -> tomoxide mapping that each module stub references.

[workspace]
resolver = "2"
members = [
    "crates/tomoxide",
    "crates/tomoxide-cli",
]
# The GUI lives in the repo but OUTSIDE this workspace (own [workspace], own
# lock): it depends on siplot (edition 2024, rust 1.92), and cargo parses every
# member manifest on every command — as a member it would silently raise the
# whole repo's effective MSRV from 1.82 to 1.92 (`default-members` does not
# avoid the parse). Fold it in when the workspace MSRV reaches 1.92+.
# See docs/GUI.md §3.1.
exclude = ["crates/tomoxide-gui"]

[workspace.package]
version = "0.5.1"
edition = "2021"
rust-version = "1.82"
license = "BSD-3-Clause"
repository = "https://github.com/physwkim/tomoxide"
authors = ["tomoxide contributors"]
description = "GPU/CPU tomographic reconstruction toolkit (tomopy + tomocupy, in Rust)"

[workspace.dependencies]
# --- the single library crate (used by the CLI binary) ---
tomoxide = { path = "crates/tomoxide", version = "0.5.1" }

# --- x-ray physics (beam hardening; optional, pulled only by the
# `beam-hardening` feature). From crates.io so the workspace is self-contained
# (an external clone / CI resolves it without the sibling repo). Self-contained:
# vendors the xraylib C sources and data tables, so no system libxrl. Its build
# runs bindgen, which needs libclang at compile time (see crates/tomoxide-prep
# docs). For local development against the sibling checkout, override with a
# `[patch.crates-io] xraylib = { path = "../xraylib-rs/crates/xraylib" }`. ---
xraylib = "0.1"

# --- computer vision (SIFT center finding; optional, `sift-center` feature).
# Pure-Rust Lowe SIFT — no system OpenCV or clang. Its rust-version is 1.92,
# above the workspace MSRV 1.82: the dep is optional and resolver = "2" does
# not enforce rust-version, so only builds that ENABLE `sift-center` need the
# newer toolchain. `default-features = false` drops its `image`-crate
# conversion helpers (tomoxide builds `GrayImage` buffers directly). ---
lowe-sift = { version = "0.2.1", default-features = false }

# --- numerics ---
ndarray = "0.16"
ndarray-npy = "0.9"
num-complex = "0.4"
num-traits = "0.2"
half = { version = "2", features = ["num-traits"] }
rayon = "1.10"
rustfft = "6"

# --- diagnostics / config ---
thiserror = "2"
log = "0.4"

# --- CLI ---
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# --- optional GPU backend (wgpu / Metal) ---
# Pulled only when a crate enables its `gpu-wgpu` feature; the default
# workspace build never compiles it. ≥24 for `Features::SHADER_FLOAT32_ATOMIC`
# (native f32 atomicAdd in WGSL, Vulkan VK_EXT_shader_atomic_float) — removes
# the CAS-emulation penalty in the scatter kernels (forward projection,
# fourierrec gather/wrap, lprec gather); falls back to CAS where unsupported.
wgpu = "30"
pollster = "0.4"
# bytemuck core is proc-macro-free and also used unconditionally (the Zarr
# writer's safe `<f4` byte cast); the heavier `derive` feature is enabled only
# by tomoxide's `gpu-wgpu` feature, which needs `#[derive(Pod, Zeroable)]`.
bytemuck = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
