[package]
name = "tomoxide-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "tomoxide command-line interface"

[features]
default = []
cuda = ["tomoxide/cuda"]
gpu-wgpu = ["tomoxide/gpu-wgpu"]

[[bin]]
name = "tomoxide"
path = "src/main.rs"

[dependencies]
tomoxide.workspace = true
clap.workspace = true
anyhow.workspace = true
env_logger.workspace = true
serde.workspace = true
toml.workspace = true
log.workspace = true
