[package]
name = "tomoxide-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core data model, geometry, backend traits and parameters for tomoxide"

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
half.workspace = true
thiserror.workspace = true
log.workspace = true
