[package]
name = "tomoxide-cpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CPU backend for tomoxide (ndarray + rayon) — ports tomopy's libtomo"

[dependencies]
tomoxide-core.workspace = true
ndarray.workspace = true
num-complex.workspace = true
rayon.workspace = true
log.workspace = true
