# tomoxide-gui — desktop GUI for tomoxide, built on rsplot (egui + wgpu).
#
# NOT a member of the repo workspace (root Cargo.toml `exclude`): rsplot is
# edition-2024 / rust 1.92 while the library workspace holds MSRV 1.82, and a
# workspace member's manifest is parsed by every cargo invocation. Own
# [workspace] + own Cargo.lock; build from this directory. See docs/GUI.md §3.1.
[package]
name = "tomoxide-gui"
version = "0.6.0"
edition = "2024"
rust-version = "1.92"
license = "BSD-3-Clause"
repository = "https://github.com/physwkim/tomoxide"
description = "tomoxide desktop GUI (rsplot/egui)"

[workspace]

[features]
# Published to crates.io, so the default is CPU-only: `cargo install
# tomoxide-gui` and the docs.rs build must succeed without an NVIDIA toolkit.
# Turn on the CUDA backend explicitly with `--features cuda` on beamline
# machines. sift-center stays on by default so the Center screen's SIFT method
# is always there — pure-Rust lowe-sift, no system packages (it needs
# rustc ≥ 1.92, above the library workspace's 1.82 MSRV; this crate pins 1.92).
# gpu-wgpu stays off — tomoxide's wgpu backend duplicates a second wgpu stack
# next to rsplot's egui-wgpu and buys the GUI nothing (docs/GUI.md §3.2).
default = ["sift-center"]
cuda = ["tomoxide/cuda"]
sift-center = ["tomoxide/sift-center"]

[dependencies]
# `version` (alongside `path`) is required to publish to crates.io: the
# published crate depends on tomoxide 0.6.0 from crates.io; local builds use path.
tomoxide = { path = "../tomoxide", version = "0.6.0", features = ["config"] }
# Same major as tomoxide's workspace pin — its public API leaks ndarray types
# (Tomo.array, find_center_pc's Array2), so both must resolve to one ndarray.
ndarray = "0.16"
# rsplot re-exports its egui/egui-wgpu, so widget code never version-skews.
# From crates.io (the crate and its GitHub repo were renamed siplot → rsplot,
# and adl2sidm's engine crate sidm → rsdm); a `=` pin keeps the GUI tracking one
# rsplot API rather than picking up 0.5.x additions silently.
rsplot = "=0.5.0"
# eframe must run the wgpu renderer (rsplot widgets need cc.wgpu_render_state).
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
# native file-open dialog; same version rsplot uses so it builds once
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
# Run screen: parse the CLI's `--progress_json` chunk lines.
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
# Run screen latest-slice live view; same major as the tomoxide writer so the
# GUI can always decode what the CLI just wrote.
tiff = "0.11"
# Run screen pre-flight: free-space check for the disk estimate.
fs4 = "0.13"

# Local development against a sibling checkout (uncomment; do not commit):
# [patch.crates-io]
# rsplot = { path = "../../../rsplot" }
