# tomoxide-gui — desktop GUI for tomoxide, built on rsplot (egui + wgpu).
#
# NOT a member of the repo workspace (root Cargo.toml `exclude`): rsplot is
# edition-2024 / rust 1.92 while the library workspace holds MSRV 1.82, and a
# workspace member's manifest is parsed by every cargo invocation. Own
# [workspace] + own Cargo.lock; build from this directory. See docs/GUI.md §3.1.
[package]
name = "tomoxide-gui"
version = "0.7.0"
edition = "2024"
rust-version = "1.92"
license = "BSD-3-Clause"
repository = "https://github.com/physwkim/tomoxide"
description = "tomoxide desktop GUI (rsplot/egui)"

[workspace]

[features]
# Published to crates.io, so the default is CPU-only: `cargo install
# tomoxide-gui` and the docs.rs build must succeed without an NVIDIA toolkit.
# Turn on the CUDA backend explicitly with `--features cuda` on beamline
# machines. sift-center stays on by default so the Center screen's SIFT method
# is always there — pure-Rust lowe-sift, no system packages (it needs
# rustc ≥ 1.92, above the library workspace's 1.82 MSRV; this crate pins 1.92).
# gpu-wgpu stays off — tomoxide's wgpu backend duplicates a second wgpu stack
# next to rsplot's egui-wgpu and buys the GUI nothing (docs/GUI.md §3.2).
default = ["sift-center"]
cuda = ["tomoxide/cuda"]
sift-center = ["tomoxide/sift-center"]

[dependencies]
# `version` (alongside `path`) is required to publish to crates.io: the
# published crate depends on tomoxide 0.6.0 from crates.io; local builds use path.
tomoxide = { path = "../tomoxide", version = "0.7.0", features = ["config", "xanes"] }
# Same major as tomoxide's workspace pin — its public API leaks ndarray types
# (Tomo.array, find_center_pc's Array2), so both must resolve to one ndarray.
ndarray = "0.16"
# rsplot re-exports its egui/egui-wgpu, so widget code never version-skews.
# From crates.io (the crate and its GitHub repo were renamed siplot → rsplot,
# and adl2sidm's engine crate sidm → rsdm); a `=` pin keeps the GUI tracking one
# rsplot API rather than picking up 0.5.x additions silently. 0.5.1 adds the
# `VolumeRaycaster` widget the XANES 3-D view uses; 0.5.3 fixes its 0.5.2
# rendering regressions (thickness cue, faint-voxel hue); 0.5.5 moves in
# lockstep with rsdm below (rsdm 0.5.5 requires rsplot ^0.5.5, and `=0.5.2`
# cannot co-resolve with that).
rsplot = "=0.5.5"
# Live mode: rsdm is rsplot's sibling EPICS data engine. `pva` alone pulls the
# headless pvAccess data engine (epics-pva-rs) and its codec decoders — no CA,
# no calc, and the display widgets sit unused (they are not feature-gated but
# need no egui context). Reaches egui through rsplot's re-export, so no second
# egui/wgpu. `=` pin tracks one rsdm API like the rsplot pin above. 0.5.5
# builds against epics-pva-rs 0.24 — the same version as the test server
# dev-dependency below, so the tree carries ONE epics-pva-rs again.
rsdm = { version = "=0.5.5", default-features = false, features = ["pva"] }
# eframe must run the wgpu renderer (rsplot widgets need cc.wgpu_render_state).
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
# native file-open dialog; same version rsplot uses so it builds once
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
# Run screen: parse the CLI's `--progress_json` chunk lines.
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
# Run screen latest-slice live view; same major as the tomoxide writer so the
# GUI can always decode what the CLI just wrote.
tiff = "0.11"
# Run screen pre-flight: free-space check for the disk estimate.
fs4 = "0.13"

# Live mode integration test: stand up an in-process PvaServer publishing
# synthetic frames/angles and subscribe through rsdm. The coupling is a TCP
# address (`PvaPlugin::with_server(server.tcp_addr())`), not shared types, so
# a version skew against rsdm's internal epics-pva-rs would still work over the
# wire — but rsdm 0.5.5 builds against ^0.24, the same as this pin, so the
# resolver unifies the tree on one copy.
[dev-dependencies]
epics-pva-rs = "0.24"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Local development against a sibling checkout (uncomment; do not commit):
# [patch.crates-io]
# rsplot = { path = "../../../rsplot" }
# rsdm = { path = "../../../rsplot/rsdm" }
