[package]
name = "tomoxide-prep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Preprocessing for tomoxide: normalize, stripe/phase/ring removal, filters"

[features]
default = []
# Beam-hardening correction. Pulls xraylib (x-ray cross sections) — opt-in
# because xraylib-sys runs bindgen at build time (needs libclang). Without this
# feature `hardening::BeamCorrector` is unavailable and the workspace builds
# with no extra toolchain.
beam-hardening = ["dep:xraylib"]

[dependencies]
tomoxide-core.workspace = true
ndarray.workspace = true
log.workspace = true
xraylib = { workspace = true, optional = true }
