[package]
name = "tomoxide-recon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend-agnostic reconstruction algorithms and center finding for tomoxide"

[dependencies]
tomoxide-core.workspace = true
ndarray.workspace = true
log.workspace = true
