[package]
name = "tomoxide-recon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend-agnostic reconstruction algorithms and center finding for tomoxide"

[features]
default = []
# SIFT-feature rotation-center finding (tomocupy `find_center.py`). Pulls the
# opencv crate, which links a system/conda OpenCV and runs bindgen at build
# time (needs clang/libclang). Opt-in so the default workspace build stays
# dependency-free.
sift-center = ["dep:opencv"]

[dependencies]
tomoxide-core.workspace = true
ndarray.workspace = true
log.workspace = true
opencv = { workspace = true, optional = true }

[dev-dependencies]
ndarray-npy.workspace = true
tomoxide-cpu.workspace = true
