[package]
name = "tomoxide-wgpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Portable GPU backend for tomoxide (wgpu / Metal / Vulkan / DX12)"

[features]
# Off by default: `wgpu` is a heavy dependency, so the default workspace build
# never compiles it. Enable to run the GPU path on Apple Silicon (Metal) etc.
default = []
gpu-wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
tomoxide-core.workspace = true
ndarray.workspace = true
log.workspace = true
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[dev-dependencies]
# CPU backend is the parity reference for the GPU kernel tests (gpu-wgpu only).
tomoxide-cpu.workspace = true
