[package]
name = "tomoxide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GPU/CPU tomographic reconstruction toolkit (tomopy + tomocupy, in Rust)"
build = "build.rs"
# Test golden fixtures are dev-only and large; keep them out of the published
# package. The vendored CUDA kernels (`cuda/`) and bending-magnet spectra
# (`data/`) stay — they are compiled (`build.rs`) / `include_str!`'d.
exclude = ["tests/fixtures"]

[features]
default = []
# CUDA backend (nvcc-compiled vendored kernels; build.rs gates on this feature).
cuda = []
# Portable GPU backend (wgpu / Metal).
gpu-wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
# Beam-hardening correction (pulls xraylib; its build runs bindgen → needs libclang).
beam-hardening = ["dep:xraylib"]
# SIFT center finding (pulls the opencv crate; links OpenCV, bindgen at build).
sift-center = ["dep:opencv"]

[dependencies]
# numerics
ndarray.workspace = true
ndarray-npy.workspace = true
num-complex.workspace = true
num-traits.workspace = true
half.workspace = true
rayon.workspace = true
rustfft.workspace = true
# diagnostics
thiserror.workspace = true
log.workspace = true
# I/O — pure-Rust HDF5 (physwkim/rust-hdf5) + TIFF (image-rs); no C/libhdf5.
# >=0.2.24: coalesced contiguous-hyperslab read (trailing full dims merged into
# one read) — a `[:, r0:r1, :]` z-chunk is `nproj` reads, not `nproj*(r1-r0)`;
# ~1.6s/job faster streaming on the 1024-proj bench (was the recon_steps
# read-bound bottleneck).
# >=0.3.0 with `parallel`: rayon-parallel chunk decode (deflate inflate + chunk
# gather). Read is on the critical path of the streaming recon (each row-chunk
# re-decodes the whole projection-chunked dataset), so this is a large
# end-to-end win — measured on a 1200x512x512 fbp streaming recon (1 GPU):
# gzip-chunked 73.5s -> 4.3s (17x), uncompressed-chunked 9.5s -> 3.1s (3.1x);
# output is byte-for-byte identical (deterministic decode).
# >=0.3.1: `H5File::close_no_sync` — finalize the reconstruction output (valid,
# complete HDF5) without the finalize-path `fsync`; the recon output is
# regenerable, and the TIFF/Zarr writers never fsync either (see the H5
# writer's `finalize`). >=0.3.2: `create` no longer `ftruncate`s a brand-new
# empty file — that truncate armed ext4 `auto_da_alloc`, whose implicit
# writeback-on-close (~325 ms per 512^3 volume) silently defeated
# `close_no_sync`. With both, h5 streaming output costs the same as tiff
# (0.84 vs 0.83 s end-to-end at 512^3, 1 GPU).
rust-hdf5 = { version = "0.3.2", features = ["parallel"] }
tiff = "0.11"
# optional GPU (wgpu / Metal) — only with `gpu-wgpu`
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
# optional x-ray physics (beam hardening) / computer vision (SIFT center)
xraylib = { workspace = true, optional = true }
opencv = { workspace = true, optional = true }

[dev-dependencies]
ndarray.workspace = true
ndarray-npy.workspace = true
tiff = "0.11"
